--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Tinh's Presonal Website</title>
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="icon" href="HTML/bunny.ico">
+    <link rel="icon" href="Images/bunny.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
