--- a/index.html
+++ b/index.html
@@ -10,57 +10,45 @@
 
 <body>
 
+
     <div class="heading">
-        <h1>HI! I'M <span class="h1color">TINH</span></h1> 
+        <h1>HI! I'M <span class="h1color">TINH</span></h1>
         <h3>DEVELOPER FROM AN GIANG, VIETNAM</h3>
     </div>
-
-    <div>
-        <table cellspacing = 50px>
-            <tr>
-                <td>
-                    <div>
-                        <h2>INTRODUCTION</h2>
-                        <p>Hello, I'm a Full-Stack Developer and Ethical Hacker from VietNam. I'm very interested in learning English. I have a hobby to travel and explore.</p>
-                        <p>My biggest strenggth is the attention to detail, which has helped me a lot in this area.</p>
-                        <p>I always finish work on time. I am quite good at maintaining work in the team to achieve the best work results.</p>
-                        <p>This can be bad, but I procrastinate a lot. I recognize this problem and I am improving it by finishing the work before the time allowed.</p>
-                    </div>
-                </td>
-                
-                <td>
-                    <div class="image">
-                        <img src="Images/cat.jpg" alt="TINH" , width="400px", height="auto">
-                    </div>
-                </td>
-
-                <td>
-                    <div>
-                        <h2>PERSONAL INFORMATION</h2>
-                        <hr>
-                        <p>Name: Lâm Chí Tình</p>
-                        <hr>
-                        <p>Age: 19 years</p>
-                        <hr>
-                        <p>Phone: 0368303497</p>
-                        <hr>
-                        <p>Email: raptor1472002@gmail.com</p>
-                        <hr>
-                        <p>Address: An Giang, Viet Nam</p>
-                        <hr>
-                        <div class="button">
-                            <a href="https://www.facebook.com/100034490890960" class="fa fa-facebook" ></a>
-                            <a href="https://github.com/Storm-cpu" class="fa fa-github" ></a><br>
-                            <a href="https://www.instagram.com/tinhlam1407/?hl=en" class="fa fa-instagram" ></a>
-                            <a href="mailto:raptor1472002@gmail.com" class="fa fa-envelope" ></a>
-                        </div>
-                    </div>
-                </td>
-            
-            </tr>
-        </table>
+    <div class="intro">
+        <h2>INTRODUCTION</h2>
+        <p>Hello, I'm a Full-Stack Developer and Ethical Hacker from VietNam. I'm very interested in learning
+            English. I
+            have a hobby to travel and explore.</p>
+        <p>My biggest strenggth is the attention to detail, which has helped me a lot in this area.</p>
+        <p>I always finish work on time. I am quite good at maintaining work in the team to achieve the best work
+            results.</p>
+        <p>This can be bad, but I procrastinate a lot. I recognize this problem and I am improving it by finishing
+            the
+            work before the time allowed.</p>
     </div>
-
+    <div class="image">
+        <img src="Images/cat.jpg" alt="TINH" , width="400px" , height="auto">
+    </div>
+    <div class="personal-info">
+        <h2>PERSONAL INFORMATION</h2>
+        <hr>
+        <p>Name: Lâm Chí Tình</p>
+        <hr>
+        <p>Age: 19 years</p>
+        <hr>
+        <p>Phone: 0368303497</p>
+        <hr>
+        <p>Email: raptor1472002@gmail.com</p>
+        <hr>
+        <p>Address: An Giang, Viet Nam</p>
+        <hr>
+        <div class="button">
+            <a href="https://www.facebook.com/100034490890960" class="fa fa-facebook"></a>
+            <a href="https://github.com/Storm-cpu" class="fa fa-github"></a>
+            <a href="https://www.instagram.com/tinhlam1407/?hl=en" class="fa fa-instagram"></a>
+            <a href="mailto:raptor1472002@gmail.com" class="fa fa-envelope"></a>
+        </div>
 </body>
 
 </html>
